--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="/Polytopia/" title="Polytopia, but online" style="display: block; text-decoration: none"><span style="color: yellow"><b>Polytopia</b></span></a>
             <a href="/MCRecipe/" title="Minecraft Recipe Generator for 1.12+" style="display: block; text-decoration: none"><span style="color: green"><b>Recipe Creator</b></span></a>
             <a href="/TI30XCalc/" title="Calculator Tricks for the TI30XIIS" style="display: block; text-decoration: none"><span style="color: black"><b>Calculator Hacks</b></span></a>
+            <a href="/TI30XCalc/" title="3D Engine Test (thanks to tbpatj on Scratch)" style="display: block; text-decoration: none"><span style="color: orange"><b>3d Engine JS</b></span></a>
         </div>
         <div thisisfor=youtube>
             <div style="background: grey; width: 70%; margin-left: 15%">
