--- a/3d Engine Test/index.html
+++ b/3d Engine Test/index.html
@@ -4,7 +4,9 @@
         <link href=index.css rel=stylesheet type=text/css />
     </head>
     <body>
-        <canvas id=engine width=700 height=500></canvas>
+        <div id=s>
+            <canvas id=engine width=700 height=500></canvas>
+        </div>
         <script src=engine.js></script>
     </body>
 </html>
