adding fps and changed angle y to overflow when going below -180 and above 180

--- a/3d Engine Test/index.html
+++ b/3d Engine Test/index.html
@@ -8,6 +8,7 @@
             <canvas id=engine width=700 height=500></canvas>
         </div>
         <div id=stats>
+            <p id=fps>FPS</p>
             <p id=x>X</p>
             <p id=y>Y</p>
             <p id=z>Z</p>
