change mcrecipe to be used for a command updater

--- a/MCRecipe/index.html
+++ b/MCRecipe/index.html
@@ -1,30 +1,10 @@
 <html>
     <head>
-        <title>MC Recipe Generator for 1.12+</title>
+        <title>MC Command Updater</title>
         <link href="res/icon.png" rel="icon"></link>
         <link href="index.css" rel="stylesheet"></link>
     </head>
     <body>
-        <div style="display: none">
-            <object data="res/objects.json" id="Obj_Load"></object>
-            <object data="res/objimg.son" id="Obj_Img"></object>
-        </div>
-        <div class=dark>
-            <ti><p>MC Recipe Creator</p></ti>
-        </div>
-        <p class="u"></p>
-        <div id='crafting'>
-            <img src="res/icon.png"></img>
-        </div>
-        <div id=items>
-            
-        </div>
-        <p class="u" style="transform: translateY(-200px)"></p>
-        <!-- Moves things back into place? -->
-        <div id="up">
-            <p>
-                MC Recipe Creator is a simple and easy tool to make custom Minecraft Recipes for Minecraft 1.12 and higher
-            </p>
-        </div>
+        <>
     </body>
 </html>
