--- a/MCRecipe/index.html
+++ b/MCRecipe/index.html
@@ -5,6 +5,16 @@
         <link href="index.css" rel="stylesheet"></link>
     </head>
     <body>
-        <>
+        <select id=s value="1.9 - 1.12">
+            <option>1.9 - 1.12</option>
+        </select>
+        <select id=e value="1.13">
+            <option>1.13</option>
+        </select>
+        <input type="text" id="in"/>
+        <a href="javascript:submit(document.getElementById('in').value,document.getElementById('s').value,document.getElementById('e').value)">Ready to fix</a>
+        <textarea id=output></textarea>
+        <script type="text/javascript" src="index.js"></script>
+        <p id=console></p>
     </body>
 </html>
