--- a/MCRecipe/index.html
+++ b/MCRecipe/index.html
@@ -11,8 +11,11 @@
         <select id=e value="1.13">
             <option>1.13</option>
         </select>
+        <p>Input</p>
         <input type="text" id="in"/>
         <a href="javascript:submit(document.getElementById('in').value,document.getElementById('s').value,document.getElementById('e').value)">Ready to fix</a>
+        <br/>
+        <p>Output</p>
         <textarea id=output></textarea>
         <script type="text/javascript" src="index.js"></script>
         <p id=console></p>
