update error page

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
             if(Math.random() > 0.5){
                 document.body.innerHTML = '<h1>2 + 2 is 4 - 1 is 3 quick maffs! 2 4s is 44 3 is in the middle of 2 and 4. 3 minus 1 minus 2 is 0. Therefore 2 + 2 is 404.</h1>\n<p>Yes. this was actually just a 404 error page...</p>';
             }else{
-                document.body.innerHTML = "<img src='404.png' style='width: 100%; height: 100%'/>";
+                document.body.innerHTML = "<img src='https://theusaf.github.io/404.png' style='width: 100%; height: 100%'/>";
             }
         </script>
         <h1>2 + 2 is 4 - 1 is 3 quick maffs! 2 4s is 44 3 is in the middle of 2 and 4. 3 minus 1 minus 2 is 0. Therefore 2 + 2 is 404.</h1>
