--- a/The Battle Girls/index.html
+++ b/The Battle Girls/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <script type="text/javascript" src="scripts/three.min.js"></script>
+        <script src="scripts/GLTFLoader.js"></script>
         <script src="scripts/index.js"></script>
     </body>
 </html>
