Updating main page and mc command updater

--- a/MCRecipe/index.html
+++ b/MCRecipe/index.html
@@ -12,7 +12,7 @@
             <option>1.13</option>
         </select>
         <p>Input</p>
-        <input type="text" id="in"/>
+        <input type="text" id="in" placeholder="Please remove as much useless whitespace from your command to prevent errors (Tabs or spaces)"/>
         <a href="javascript:submit(document.getElementById('in').value,document.getElementById('s').value,document.getElementById('e').value)">Ready to fix</a>
         <br/>
         <p>Output</p>
