--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div style="width: 100%; background: grey; text-align: center" id="top">
             <a href="/Drawephone/" title="Drawephone game" style="display: block; text-decoration: none"><span style="color: brown"><b>Drawephone!</b></span></a>
             <a href="/Polytopia/" title="Polytopia, but online" style="display: block; text-decoration: none"><span style="color: yellow"><b>Polytopia</b></span></a>
-            <a href="/MCRecipe/" title="Minecraft Recipe Generator for 1.12+" style="display: block; text-decoration: none"><span style="color: green"><b>Recipe Creator</b></span></a>
+            <a href="/MCRecipe/" title="Minecraft Command Updater 1.12 to 1.13" style="display: block; text-decoration: none"><span style="color: green"><b>Command Updater</b></span></a>
             <a href="/TI30XCalc/" title="Calculator Tricks for the TI30XIIS" style="display: block; text-decoration: none"><span style="color: black"><b>Calculator Hacks</b></span></a>
             <a href="/3d Engine Test/" title="3D Engine Test (thanks to tbpatj on Scratch)" style="display: block; text-decoration: none"><span style="color: orange"><b>3d Engine JS</b></span></a>
         </div>
