Updaing calculator hax

--- a/TI30XCalc/index.html
+++ b/TI30XCalc/index.html
@@ -30,7 +30,11 @@
                     <textarea id="result" readonly></textarea>
                 </div>
                 <div id=opt2 style='display: none'>
-                    
+                    <p>Please input a decimal percentage in the input below.</p>
+                    <input type="number" id="perc"></input>
+                    <button id="pe">Press this button to get the result</button>
+                    <textarea id="outps" readonly style="width: 300px; height: 30px"></textarea>
+                    <p>Now, put the number back into your rand variable.</p>
                 </div>
             </div>
             <hr/>
