pokemon go thingy update

--- a/pogo/index.html
+++ b/pogo/index.html
@@ -9,7 +9,7 @@
             <br/>
             <p class="question">What is your name?</p><input type="text" id="name"/>
             <div id="questions"></div>
-            <button>Submit</button>
+            <button>Submit</button><input type="file" id="pic"/>
         </div>
         <canvas width=640 height=1136></canvas>
         <script type="text/javascript" src="becomepokemon.js"></script>
