pokemon go thingy finish kind of

--- a/pogo/index.html
+++ b/pogo/index.html
@@ -11,6 +11,11 @@
             <div id="questions"></div>
             <button>Submit</button><input type="file" id="pic"/>
         </div>
+        <div class="half">
+            <p id="appraisal"></p>
+            <p id="appraisal2"></p>
+            <p id="appraisal3"></p>
+        </div>
         <canvas width=640 height=1136></canvas>
         <script type="text/javascript" src="becomepokemon.js"></script>
     </body>
