--- a/pogo/index.html
+++ b/pogo/index.html
@@ -8,6 +8,8 @@
             <p class="question">What trainer level are you?</p><input type="number" id="lvl"/>
             <br/>
             <p class="question">What is your name?</p><input type="text" id="name"/>
+            <br/>
+            <p class="question">Pick a random number from 0 to 1</p><input type="number" id="pokeid"/>
             <div id="questions"></div>
             <button>Submit</button><input type="file" id="pic"/>
         </div>
