--- a/mafia.html
+++ b/mafia.html
@@ -42,6 +42,7 @@
       sometimes no mafia is added at beginning
       when mafia gets lynched, mafia members are not immediately promoted
       vampire youngest doesnt get updated
+      mobile text looks weird
       TODO add voting
       TODO add mayor stuff
       TODO add witch
@@ -161,8 +162,7 @@
         flex-flow: row wrap;
         white-space: nowrap;
         max-height: 30vh;
-        font-size: 200%;
-        text-indent: 10%;
+        font-size: 5vw;
         overflow-y: auto;
       }
       #actionbox div{
