Improve CSS for mobile usability

--- a/mafia.html
+++ b/mafia.html
@@ -170,6 +170,7 @@
         width: 24vw;
         min-height: 10vh;
         border: solid grey 2px;
+        overflow-x: auto;
       }
       #actionbox button{
         height: 5vh;
